--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
       "Fonts/*": ["src/fonts/*"],
       "Images/*": ["src/images/*"],
       "Scripts/*": ["src/scripts/*"],
-      "Styles/*": ["scr/styles/*"]
+      "Styles/*": ["scr/styles/*"],
+      "Types/*": ["scr/types/*"]
     } /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
