--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swiper": "^6.5.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
