--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/moment": "^2.13.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.2",
     "file-loader": "^6.2.0",
@@ -25,6 +26,7 @@
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.4.1",
     "postcss-loader": "^5.2.0",
+    "precss": "^4.0.0",
     "sass": "^1.32.10",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -38,6 +40,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve"
   },
+  "browserslist": [
+    "last 2 versions",
+    "> 0.2%",
+    "not dead"
+  ],
   "author": "",
   "license": "ISC"
 }
